--- a/MyFancyToDoList.Web/MyFancyToDoList.Web.csproj
+++ b/MyFancyToDoList.Web/MyFancyToDoList.Web.csproj
@@ -185,6 +185,7 @@
     <Content Include="Views\ToDoList\Details.cshtml" />
     <Content Include="Views\ToDoList\Edit.cshtml" />
     <Content Include="Views\ToDoList\Delete.cshtml" />
+    <Content Include="Views\ToDoList\Completed.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
