--- a/MyFancyToDoList.Web/MyFancyToDoList.Web.csproj
+++ b/MyFancyToDoList.Web/MyFancyToDoList.Web.csproj
@@ -124,6 +124,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstract\IToDoList.cs" />
     <Compile Include="App_Start\BundleConfig.cs" />
     <Compile Include="App_Start\FilterConfig.cs" />
     <Compile Include="App_Start\RouteConfig.cs" />
